# chessboard_detection

./: .gitignore  CMakeLists.txt  Readme.md  pyproject.toml  setup.py
.github/workflows/: test-pip-install.yml
conda.recipe/: meta.yaml
src/: Chessboard.h  chessBoardCornersDetector.cpp  chessBoardCornersDetector_pybind.cpp
test/: test.py
tests/: test.py
